# rag-practice

.devcontainer/: devcontainer.json
ASKMYPDF/: .env.sample  README.md  app.py  requirement.txt
ASKMYPDF/sample_document_and_question/: sample_question.txt
GenAI-Project/Project 1(speech to text)/project/: process.py
Langgraph/: .env.sample  graph copy.py  graph.py
Project 1(speech to text)/project/: pyproject.toml
Resume_roaster/: requirements.txt  run.sh  worker.sh
Resume_roaster/.devcontainer/: devcontainer.json
Resume_roaster/app/: main.py  server.py
Resume_roaster/app/db/: db.py
Resume_roaster/app/db/collections/: file.py
Resume_roaster/app/queue/: q.py  server.py  workers copy.py  workers.py
Resume_roaster/app/utils/: file.py
speech2speech-Cursor/: STT.py  graph.py  index.html  main.js  pyproject.toml  snakeGame.py  speech_module.py  summerizer.py  text_to_speech.py
