[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.1",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "openai[voice-helpers]>=1.77.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pymongo>=4.11.3",
    "speechrecognition>=3.14.2",
]
